Fix alignment emoji and photo upload icons

--- a/global_styles.css
+++ b/global_styles.css
@@ -435,7 +435,7 @@ img.tabIcon {
 	position: relative;
 }
 #smsattachmentimagepreviewdelete{
-	position: absolute;    
+	position: absolute;
 	width: 16px;
     top: 0px;
     right: 8px;
@@ -443,12 +443,11 @@ img.tabIcon {
 }
 #smsattachmentimageloading{
     z-index: 1000;
-	cursor: pointer;    
+	cursor: pointer;
     position: absolute;
     margin-left: 32px;
 }
 #smsemoji{
-	font-size: 22px;
 	cursor: pointer;
 }
 .hidden{
